# tinycomet

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  flake.nix  justfile
.github/workflows/: check.yml  release.yaml
crates/abci-proxy/: Cargo.toml
crates/abci-proxy/src/: codec.rs  main.rs  server.rs  translator.rs
crates/app-shell/: Cargo.toml
crates/app-shell/src/: app.rs  main.rs  state.rs  storage.rs
crates/client/: Cargo.toml
crates/client/src/: frost_cmd.rs  keys.rs  main.rs  query.rs  tx.rs
crates/launcher/: Cargo.toml
crates/launcher/src/: main.rs
crates/types/: Cargo.toml
crates/types/src/: crypto.rs  domain.rs  genesis.rs  ipc.rs  lib.rs
