[workspace]
resolver = "2"
members = [
    "crates/types",
    "crates/abci-proxy",
    "crates/app-shell",
    "crates/launcher",
]

[workspace.package]
edition = "2021"
rust-version = "1.80"

[workspace.dependencies]
tinycomet-types = { path = "crates/types" }
borsh = { version = "1.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
eyre = "0.6"
color-eyre = "0.6"
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
tendermint-abci = "0.40.4"
tendermint-proto = "0.40.4"
rocksdb = "0.23"
jmt = "0.12"
sha2 = "0.10"
prost = "0.13"
bytes = "1"
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
serde_json = "1"
