[package]
name = "tinycomet-proxy"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "tinycomet-proxy"
path = "src/main.rs"

[dependencies]
tinycomet-types = { workspace = true }
tendermint-abci = { workspace = true }
tendermint-proto = { workspace = true }
prost = { workspace = true }
bytes = { workspace = true }
borsh = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
eyre = { workspace = true }
color-eyre = { workspace = true }
