[package]
name = "tinycomet-app"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "tinycomet-app"
path = "src/main.rs"

[dependencies]
tinycomet-types = { workspace = true }
rocksdb = { workspace = true }
jmt = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
eyre = { workspace = true }
color-eyre = { workspace = true }
clap = { workspace = true }
borsh = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
anyhow = "1"
tokio-util = { workspace = true }
futures = { workspace = true }
