[package]
name = "tinycomet-client"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "tinycomet-client"
path = "src/main.rs"

[dependencies]
tinycomet-types = { workspace = true }
ed25519-dalek = { workspace = true, features = ["rand_core"] }
frost-ed25519 = { workspace = true }
rand = { workspace = true }
borsh = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
eyre = { workspace = true }
color-eyre = { workspace = true }
chrono = { workspace = true }
