[package]
name = "tinycomet-types"
version = "0.1.0"
edition.workspace = true

[dependencies]
borsh = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
serde_json = { workspace = true }
